# Hydrogen

./: Coding_Appendices.md  README.md  ReadMe.md  SPEC.md  Sepc.md  TRUSTLESS_VERIFICATION_AND_DATA_GENERATION.md  docker-compose.yml  pyproject.toml  roadmap.md
Appendices/: A.md  Alpha_Value.mD  B.md  C.md  D.md  Design Choices.md  E.md  F.md  G.md  JAX_Optimization.md  SIBR.md
Archive/: Detailed_ReadMe.md  Long_Sepc.md
docker/miner/: README.md  entrypoint.sh
docker/validator/: Dockerfile
docs/: CHALLENGE_GENERATION_DESIGN.md  CLEANUP_NOTES.md  DATA_STRATEGY.md  DETERMINISM_DESIGN.md  EMISSIONS.md  GTM.md  IMPLEMENTATION_STATUS.md  STRATEGY.md  SYMBOLIC_LAYER_DESIGN.md  TESTING_DESIGN.md  VALIDATOR_GUIDE.md  roadmap.md
examples/: run_agentic_miner.py
hydrogen/: protocol.py  validator.py
hydrogen/backbones/: __init__.py  neural_operator.py  physicsnemo.py
hydrogen/base/: validator.py
hydrogen/challenges/: __init__.py  base.py  burgers.py  darcy_2d.py  elasticity_2d.py  heat.py
hydrogen/data/: __init__.py  download_pdebench.py  pdebench_loader.py  synthetic_loader.py
hydrogen/emission/: mechanics.py
hydrogen/evaluation/: plan.py
hydrogen/landscape/: __init__.py  agent.py  causal_knowledge_base.py  storage.py
hydrogen/miner/: agent.py  client.py  mcp_server.py  real_client.py  strategy_generator.py
neurons/: miner.py  validator.py  validator_config.py
scripts/: generate_leaderboard.py  generate_score_data.py  publish_daily_priors.py  run_landscape_daily.py
tests/: test_physics_gates.py  test_scorer.py  test_tracker.py
(+17 files in other folders)
