[project]
name = "hydrogen"
version = "0.9.0"
description = "Decentralized Physics-Informed Neural Operator Subnet for Bittensor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bittensor>=9.0.0",
    "torch>=2.4.0",
    "numpy>=1.26",
    "scipy",
    "pandas",
    "scikit-learn",
    "pyyaml",
    "tqdm",
    "h5py",
    "pysr",
    "neuraloperator",           # Core neural operator library
    "physicsnemo",            # NVIDIA PhysicsNeMo / Modulus
    "econml",                 # Causal inference
    "docker",
]

[project.optional-dependencies]
validator = [
    "bittensor[validator]",
]
miner = [
    "bittensor[miner]",
]

[tool.setuptools.packages.find]
where = ["."]
